# src/API/Controllers/MembersController.cs
@@ -7,7 +7,8 @@ using API.DTOs;
 namespace API.Controllers;
 
 [Authorize]
-public class MembersController(IMembersRepository membersRepository) : BaseApiController
+public class MembersController(IMembersRepository membersRepository,
+    IPhotoService photoService) : BaseApiController
 {
     [HttpGet]
     public async Task<ActionResult<IReadOnlyList<Member>>> GetMembers()
@@ -58,5 +59,45 @@ public class MembersController(IMembersRepository membersRepository) : BaseApiCo
         }
 
         return BadRequest("Failed to update profile");
-    } 
+    }
+
+    [HttpPost("photo")]
+    public async Task<ActionResult<Photo>> AddPhoto([FromForm] IFormFile file)
+    {
+        var member = await membersRepository.GetMemberForUpdateAsync(User.GetMemberId());
+
+        if (member == null)
+        {
+            return NotFound("Member not found");
+        }
+
+        var result = await photoService.UploadPhotoAsync(file);
+
+        if (result.Error != null)
+        {
+            return BadRequest(result.Error.Message);
+        }
+
+        var photo = new Photo
+        {
+            Url = result.SecureUrl.AbsoluteUri,
+            PublicId = result.PublicId,
+            MemberId = User.GetMemberId()
+        };
+
+        if (member.ImageUrl == null)
+        {
+            member.ImageUrl = photo.Url;
+            member.User.ImageUrl = photo.Url;
+        }
+
+        member.Photos.Add(photo);
+
+        if (await membersRepository.SaveAllAsync())
+        {
+            return photo;
+        }
+
+        return BadRequest("Somehting went wrong!");
+    }
 }
